style entire chat room + fix white-spacing

--- a/client/src/features/chat/ChatRoom.scss
+++ b/client/src/features/chat/ChatRoom.scss
@@ -4,5 +4,8 @@
     flex-direction: column;
     gap: 24px;
     margin: 1.5em auto;
+    border: 1px solid gray;
+    padding: 16px;
+    border-radius: 16px;
   }
 }
