--- a/client/src/features/chat/room/RoomBody/message/variants/Message.scss
+++ b/client/src/features/chat/room/RoomBody/message/variants/Message.scss
@@ -11,7 +11,7 @@
     padding: 16px 8px;
     border-radius: 16px;
     @include apply-accent-background();
-    white-space: pre;
+    white-space: pre-wrap;
   }
 
   &.other-user .chat-room-message-content {
